# systemtimemgr

./: .gitignore  CHANGELOG.md  Makefile.am  NOTICE  Readme.md  config.h  configure.ac  cov_build.sh  libtool  main.cpp  run_l2.sh  systimemgr.cpp  systimemgr.h
.github/: CODEOWNERS
.github/workflows/: L1-Test.yaml  L2-tests.yml  code-coverage.yml  native_full_build.yml  pr-diff-summary.yml
interface/: Makefile.am  configure.ac  ipublish.h  irdklog.h  isubscribe.h  itimermsg.h  itimesrc.h  itimesync.h
systemd_units/: systimemgr.service
systimerfactory/: Makefile.am  Makefile.in  chronytimesrc.h  config.h.in  configure  configure.ac  drmtimersrc.cpp  drmtimersrc.h  dtttimersrc.cpp  dtttimersrc.h  iarmpowersubscriber.cpp  iarmpowersubscriber.h  iarmpublish.cpp  iarmpublish.h  iarmsubscribe.cpp  iarmsubscribe.h  iarmtimerstatussubscriber.cpp  iarmtimerstatussubscriber.h  ipowercontrollersubscriber.cpp  ipowercontrollersubscriber.h  networkmgrsubscriber.cpp  networkmgrsubscriber.h  networkstatussrc.cpp  networkstatussrc.h  ntptimesrc.h  pubsubfactory.cpp  rdkdefaulttimesync.cpp  rdkdefaulttimesync.h  regulartimesrc.h  stttimesrc.h  teetimesync.h  testpublish.h  testsubscribe.h  testtimesync.h  timerfactory.cpp  timerfactory.h
systimerfactory/autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2
systimerfactory/unittest/: Makefile.am  SysTimeMgrUnitTest.cpp  configure.ac  drmtimerUnitTest.cpp  dtttimerUnitTest.cpp  iarmpowersubscribe_gtest.cpp  iarmpublish_gtest.cpp  iarmsubscribe_gtest.cpp  iarmtimerstatus_gtest.cpp  ipowercontrollersubscriber_gtest.cpp  pubsubfactory_gtest.cpp  pubsubfactoy_gtest.cpp  rdkDefaulttimesyncUnitTest.cpp  timerfactory_gtest.cpp
systimerfactory/unittest/mocks/: Client_Mock.h  libIARM.h  libIARMCore.h  libIBus.h  libIBusDaemon.h  power_controller.cpp  power_controller.h  secure_wrapper.h
systimerfactory/unittest/mocks/thunder/: WPEFrameworkMock.h
test/: TestIarmInterface.cpp  TestIarmInterface.h  rdkdefaulttimesyncTest.cpp  run_ut.sh
test/functional-tests/features/: systemtimemgr_single_instance.feature  systimemgr_bootupflow.feature  systimemgr_check_file.feature  systimemgr_get_time.feature  systimemgr_initialisation.feature  systimemgr_secureTimeInitialisation.feature  systimemgr_secureTime_check_event.feature  systimemgr_secureTime_quality.feature  systimemgr_single_instance.feature  systimemgr_time_quality.feature
test/functional-tests/tests/: 1  helper_functions.py  test_secureTime_checkEvent.py  test_secureTime_initialisation.py  test_secureTime_quality.py  test_systemtimemgr_check_logs.py  test_systemtimemgr_get_time.py  test_systemtimemgr_initialisation.py  test_systemtimemgr_set_time.py  test_systemtimemgr_single_instance.py  test_systimemgr_bootup_flow.py  test_systimemgr_check_file.py  test_systimemgr_get_time.py  test_systimemgr_initialisation.py  test_systimemgr_nwstatus.py  test_systimemgr_single_instance.py  test_systimemgr_time_quality.py
